@@ -4,14 +4,16 @@ Hash: SHA1
 AUX mcollectived.initd 597 RMD160 ad252d866ea4f9f5dac7cb8c851d7ef561eae84c SHA1 4fc766e41db8f50dcde5e8f2c5495f4ad13dd9ec SHA256 3a187881d05152762116a80bb325c1f80ed2096802c19aa37ba77287784979fb
 DIST mcollective-0.4.2.tgz 97887 RMD160 fe35f6297ec541948323ebbc6b02406bfd0a6478 SHA1 04d80b4b74abf5f44cd1e6df2f36a4cc6ff00591 SHA256 966ecb84c131750d5573cc5707d7e2919ea1aacebd3ee35a99d07730a0d350e9
 DIST mcollective-0.4.3.tgz 49120 RMD160 bbaecb86227733830eaccccdae0dded2a548dd56 SHA1 02553984db8e3c2cd2a14f47068a082bdd7b5cc5 SHA256 29cb664c38ab520e31bc20064bce7f7f2997a7d777bed6f0ac3efb63aea3f5a9
+DIST mcollective-0.4.4.tgz 149453 RMD160 9c5f441f1abebb72c9c6b45192a9158ffad47be0 SHA1 b8a555445c307534bbf1328f5f1e5950f55543ef SHA256 b680807d5358defdeff35cc68b8b3a91a7cb227870dc1ace41495b8996741a06
 EBUILD mcollective-0.4.2.ebuild 1343 RMD160 8ada4cb521181dad0bf3c46f7866b2ef1fecded7 SHA1 55f28397841b34f685e086e37fe06dc3eca27971 SHA256 6abbee4e1e854f8c6f72e49a442af311a53c27d7aaa3ca0233e8ad72f84aaf77
 EBUILD mcollective-0.4.3.ebuild 1343 RMD160 8ada4cb521181dad0bf3c46f7866b2ef1fecded7 SHA1 55f28397841b34f685e086e37fe06dc3eca27971 SHA256 6abbee4e1e854f8c6f72e49a442af311a53c27d7aaa3ca0233e8ad72f84aaf77
-MISC ChangeLog 623 RMD160 d0d2ea8a596f9b22d658829c929783e81fe53bf7 SHA1 68a07cc659db5ff25d004d328d12596f06e48ba6 SHA256 b3dca43348eb7769f6a2c14fd6bfdf80860701c1afda77292f758d1ec4266c72
+EBUILD mcollective-0.4.4.ebuild 1343 RMD160 8ada4cb521181dad0bf3c46f7866b2ef1fecded7 SHA1 55f28397841b34f685e086e37fe06dc3eca27971 SHA256 6abbee4e1e854f8c6f72e49a442af311a53c27d7aaa3ca0233e8ad72f84aaf77
+MISC ChangeLog 755 RMD160 03612407841cc2d99b761ba1a46a0cc323c4d0dc SHA1 ed4fbfa6fcb7ab5adb16412a79169db9964d64ca SHA256 9e9af11a6552e76f290e70ef3c06a33ecbeb9384c314b1f0a700e1a8566fdf89
 MISC metadata.xml 428 RMD160 feee94472e92ab507bdbdd678fa2ea8b02b65ac6 SHA1 c2b0057b0d86fe3e5cc93cbb3ed551410ca05d05 SHA256 16f1e90b1d2d4b13cd323983cde873dcc56bb25eade80030d21bc1815a158338
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iD8DBQFLXfFwQW+hXSf0t0IRAuk9AKCJu1qo1f5RDy9HXOk+xu+Juk7fmQCfRhmX
-oJCVYJK2hwn9dGnVg057w9Q=
-=kKkM
+iD8DBQFLz2UzQW+hXSf0t0IRAj5SAJkBGL/vOh1Ld2hSzkzAv88TK1uhPACdHcSw
+Oj2S4ZOvEfXYQyMqKO6JQSA=
+=8il9
 -----END PGP SIGNATURE-----
